# expander

./: LICENSE  README-en.md  README.md  memo.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pytest.yml
src/expander/: __init__.py  __main__.py  bundle_importer.py  expand.py  import_info.py  license_string.py  module_info.py
tests/: conftest.py  test_expand.py  test_test.py
tests/src/: abs_name.py  from_init.py  future.py  import_as.py  import_func.py  import_func_as.py  input.py  normal.py  otherlib.py  relative_from_childdir.py  relative_from_parentdir.py  relative_from_samedir.py  submodule.py  wildcard_main.py  wildcard_main_all.py  wildcard_module.py  wildcard_module_all.py
tests/testlib/testlib_a/: main_a.py  main_b.py  main_c.py  main_d.py
tests/testlib/testlib_a/sublib_a/: sub_aa.py  sub_ab.py  sub_ac.py
tests/testlib/testlib_a/sublib_b/: __init__.py  sub_ba.py
tests/testlib/testlib_a/sublib_c/: __init__.py  sub_ca.py  sub_cb.py
tests/testlib/testlib_a/sublib_d/: sub_da.py
tests/testlib/testlib_b/: other.py  read_int.py
