[project]
name = "expander"
version = "0.5.0"
description = "expand python code to single source file"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["competitive-programming", "data-structures", "algorithms"]
authors = [
  {name = "Masaki Kobayashi", email = "bayashi.cl@gmail.com" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["mypy", "black", "pytest", "ruff"]

[project.urls]
"Homepage" = "https://github.com/bayashi-cl/expander"
"Bug Reports" = "https://github.com/bayashi-cl/expander/issues"
"Source" = "https://github.com/bayashi-cl/expander/"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"tests/out/*.py" = ["ALL"]
"tests/src/*.py" = ["ALL"]
"tests/testlib/*.py" = ["ALL"]
"tests/*.py" = ["S101"]

[tool.mypy]
strict = true
