[project]
name = "expander"
description = "expand python code to single source file"
authors = [{ name = "Masaki Kobayashi", email = "bayashi.cl@gmail.com" }]
keywords = ["competitive-programming"]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/bayashi-cl/expander"
"Bug Reports" = "https://github.com/bayashi-cl/expander/issues"
"Source" = "https://github.com/bayashi-cl/expander/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.1.4", "mypy>=1.6.1", "pytest>=7.4.3"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/expander/__init__.py"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "COM812", "ISC001"]
exclude = ["tests/src/*", "tests/out/*", "tests/testlib/*"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.mypy]
exclude = ["tests/src", "tests/out", "tests/testlib"]
strict = true
