[metadata]
name = expander
version = attr: expander.__version__
description = expand python code to single source file
long_description = file: README-en.md
long_description_content_type = text/markdown
license = CC0
author = Masaki Kobayashi
author_email = bayashi.cl@gmail.com

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    flake8
    mypy
    black
    isort
test = pytest
